--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Landing Page | Your'Krunal</title>
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet" />
   <link rel="stylesheet" href="bl.css" />
+  <link rel="shortcut icon" href="https://ik.imagekit.io/td7bvvb4j/Favicons/android-chrome-512x512.png?updatedAt=1758441816377" type="image/x-icon">
 </head>
 
 <body>
@@ -26,7 +27,7 @@
     </div>
 
     <h1 class="ourAdvantage">Our Advantages</h1>
-    <img id="img1" src="IMG_8924.JPG" alt="" />
+    <img id="img1" src="01.webp" alt="" />
     <img id="img2" src="IMG-20230209-WA0011.jpg" alt="" />
     <img id="img3" src="IMG_8925.JPG" alt="" />
     <img id="img4" src="IMG_20211108_162440_449.webp" alt="" />
